--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,7 @@
                             <li>
                                 <a
                                     href="https://www.linkedin.com/in/yusin-hsu/"
+                                    target="_blank"
                                     class="flex items-center p-2 hover:text-primary"
                                     ><i class="fa-brands fa-linkedin"></i
                                 ></a>
@@ -72,6 +73,7 @@
                             <li>
                                 <a
                                     href="https://github.com/yusin07"
+                                    target="_blank"
                                     class="flex items-center p-2 hover:text-primary"
                                     ><i class="fa-brands fa-github"></i
                                 ></a>
@@ -79,6 +81,7 @@
                             <li>
                                 <a
                                     href="https://dribbble.com/Yu_Sin"
+                                    target="_blank"
                                     class="flex items-center p-2 hover:text-primary"
                                     ><i class="fa-brands fa-dribbble"></i
                                 ></a>
@@ -263,7 +266,7 @@
                     <img
                         src="./asset/portfolio/zk framework.png"
                         alt="zkframework"
-                        class="min-h-[320px] object-cover" />
+                        class="min-h-[360px] object-cover" />
                     <div class="absolute top-0 w-full">
                         <div class="space-y-4 p-8">
                             <h3
@@ -286,7 +289,7 @@
                 </div>
                 <div class="mt-6 flex flex-col gap-6 md:flex-row">
                     <div
-                        class="relative overflow-hidden rounded-lg border border-zinc-200 md:w-7/12 lg:w-1/2"
+                        class="relative flex overflow-hidden rounded-lg border border-zinc-200 md:w-7/12 lg:w-1/2"
                         data-aos="fade-up">
                         <img
                             src="./asset/portfolio/zk component.png"
@@ -377,7 +380,7 @@
                 </div>
                 <div class="mt-6 flex flex-col gap-6 md:flex-row">
                     <div
-                        class="relative overflow-hidden rounded-lg border border-zinc-200 md:order-2 md:w-7/12"
+                        class="relative flex overflow-hidden rounded-lg border border-zinc-200 md:order-2 md:w-7/12"
                         data-aos="fade-up"
                         data-aos-delay="150">
                         <img
@@ -398,7 +401,7 @@
                         </div>
                     </div>
                     <div
-                        class="space-y-6 md:order-1 md:w-5/12"
+                        class="flex flex-col space-y-6 md:order-1 md:w-5/12"
                         data-aos="fade-up">
                         <div
                             class="overflow-hidden rounded-lg border border-zinc-200">
@@ -565,15 +568,12 @@
             <div class="mx-auto max-w-[1400px] pt-8 shadow-lg">
                 <div
                     class="flex items-center justify-between rounded-t-lg border-b border-zinc-200 bg-zinc-100 p-4 text-zinc-900">
-                    <h2 class="text-2xl font-bold">ZK Website Redesign</h2>
-                    <div class="flex items-center space-x-4">
-                        <p>Click X to close</p>
-                        <button
-                            id="zkWebX"
-                            class="p-2 text-2xl hover:text-primary">
-                            <i class="fa-solid fa-xmark"></i>
-                        </button>
-                    </div>
+                    <h2 class="text-md font-bold sm:text-2xl">
+                        ZK Website Redesign
+                    </h2>
+                    <button id="zkWebX" class="p-2 text-2xl hover:text-primary">
+                        <i class="fa-solid fa-xmark"></i>
+                    </button>
                 </div>
                 <div
                     class="h-[calc(100vh-112px)] overflow-scroll overscroll-contain pb-8">
@@ -608,15 +608,14 @@
             <div class="mx-auto max-w-[1400px] pt-8 shadow-lg">
                 <div
                     class="flex items-center justify-between rounded-t-lg border-b border-zinc-200 bg-zinc-100 p-4 text-zinc-900">
-                    <h2 class="text-2xl font-bold">ZK Component Guide</h2>
-                    <div class="flex items-center space-x-4">
-                        <p>Click X to close</p>
-                        <button
-                            id="zkGuideX"
-                            class="p-2 text-2xl hover:text-primary">
-                            <i class="fa-solid fa-xmark"></i>
-                        </button>
-                    </div>
+                    <h2 class="text-md font-bold sm:text-2xl">
+                        ZK Component Guide
+                    </h2>
+                    <button
+                        id="zkGuideX"
+                        class="p-2 text-2xl hover:text-primary">
+                        <i class="fa-solid fa-xmark"></i>
+                    </button>
                 </div>
                 <div
                     class="h-[calc(100vh-112px)] overflow-scroll overscroll-contain pb-8">
@@ -635,15 +634,12 @@
             <div class="mx-auto max-w-[1400px] pt-8 shadow-lg">
                 <div
                     class="flex items-center justify-between rounded-t-lg border-b border-zinc-200 bg-zinc-100 p-4 text-zinc-900">
-                    <h2 class="text-2xl font-bold">Quire Landing Page</h2>
-                    <div class="flex items-center space-x-4">
-                        <p>Click X to close</p>
-                        <button
-                            id="quireX"
-                            class="p-2 text-2xl hover:text-primary">
-                            <i class="fa-solid fa-xmark"></i>
-                        </button>
-                    </div>
+                    <h2 class="text-md font-bold sm:text-2xl">
+                        Quire Landing Page
+                    </h2>
+                    <button id="quireX" class="p-2 text-2xl hover:text-primary">
+                        <i class="fa-solid fa-xmark"></i>
+                    </button>
                 </div>
                 <div
                     class="h-[calc(100vh-112px)] overflow-scroll overscroll-contain pb-8">
@@ -880,6 +876,7 @@
                     >
                     <a
                         href="https://github.com/yusin07/Portfolio"
+                        target="_blank"
                         class="hidden whitespace-nowrap rounded bg-white/10 py-1 px-2 text-sm text-white hover:text-primary sm:block"
                         >Check Repo</a
                     >
