--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
         <section
             id="landing"
             style="background-image: url('./asset/bg.png')"
-            class="overflow-hidden bg-cover bg-fixed bg-no-repeat pt-[120px] sm:pt-20">
+            class="overflow-hidden bg-fixed bg-no-repeat pt-[112px] sm:pt-20">
             <div
                 class="mx-auto max-w-screen-2xl px-4 pb-20 sm:px-8 md:px-12 md:pb-32">
                 <div
@@ -294,7 +294,7 @@
                         <img
                             src="./asset/portfolio/zk component.png"
                             alt="zk component"
-                            class="h-full object-cover" />
+                            class="object-cover" />
                         <div
                             class="absolute bottom-0 flex w-full items-center justify-between bg-gradient-to-t from-blue-300 p-6 pt-8">
                             <h3
@@ -386,7 +386,7 @@
                         <img
                             src="./asset/portfolio/quire landingpage.png"
                             alt="quire"
-                            class="none pointer-events-none h-full object-cover object-left-top" />
+                            class="none pointer-events-none object-cover object-left-top" />
                         <div
                             class="absolute bottom-0 flex w-full items-center justify-between bg-gradient-to-t from-zinc-500 p-6 pt-8">
                             <h3
@@ -408,7 +408,7 @@
                             <img
                                 src="./asset/portfolio/quire.png"
                                 alt="zk component"
-                                class="h-full object-cover" />
+                                class="object-cover" />
                         </div>
                         <a
                             href="https://quire.io/"
