--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
         <section
             id="landing"
             style="background-image: url('./asset/bg.png')"
-            class="bg-cover bg-no-repeat pt-[112px] sm:pt-20">
+            class="overflow-hidden bg-cover bg-no-repeat pt-[112px] sm:pt-20">
             <div
                 class="mx-auto max-w-screen-2xl px-4 pb-20 sm:px-8 md:px-12 md:pb-32">
                 <div
@@ -135,7 +135,7 @@
                         </div>
                     </div>
                     <div
-                        class="overflow-hidden lg:w-1/2"
+                        class="lg:w-1/2"
                         data-aos="fade-left"
                         data-aos-delay="800">
                         <img
