--- a/src/index.html
+++ b/src/index.html
@@ -94,7 +94,7 @@
         <section
             id="landing"
             style="background-image: url('./asset/bg.png')"
-            class="overflow-hidden bg-cover bg-no-repeat pt-[112px] sm:pt-20">
+            class="bg-cover bg-no-repeat pt-[112px] sm:pt-20">
             <div
                 class="mx-auto max-w-screen-2xl px-4 pb-20 sm:px-8 md:px-12 md:pb-32">
                 <div
@@ -653,7 +653,7 @@
                 </div>
             </div>
         </div>
-        <section id="experience" class="overflow-hidden bg-zinc-900">
+        <section id="experience" class="bg-zinc-900">
             <div
                 class="bg-transparent bg-cover bg-center bg-no-repeat"
                 style="background-image: url('./asset/bg2.png')">
