--- a/src/index.html
+++ b/src/index.html
@@ -557,8 +557,8 @@
                             Pinxer Concept
                         </h3>
                         <p class="mt-1 leading-loose text-zinc-700">
-                            The smart battery management App. Take control of
-                            your energy efficiency with Endurosense.
+                            Pinxer is a hardware and software integration
+                            system.It’s a new ways of interacting with photos.
                         </p>
                     </div>
                     <div data-aos="fade-up" data-aos-delay="300">
